# aitrader

./: .replit  backtester.py  main.py  pyproject.toml  test_backtester.py  test_comprehensive_backtesting.py  test_comprehensive_validation.py  test_integration.py  test_trading_system.py
futures/: __init__.py  backtester.py  claude_client.py  claude_enhanced_trader.py  claude_market_intelligence.py  config.py  futures_backtester.py  futures_claude_client.py  futures_config.py  futures_main.py  futures_mcp_client.py  futures_session_monitor.py  futures_time_based_trader.py  futures_time_manager.py  main.py  mcp_client.py  session_monitor.py  test_time_based_trading.py  time_manager.py
spot/: ai_trader.py  backtester.py  claude_client.py  main.py  mcp_client.py  split_order.py  spot_ai_trader.py  spot_backtester.py  spot_claude_client.py  spot_config.py  spot_main.py  spot_mcp_client.py  spot_split_order.py
